--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ article h4 {
 }
 
 p {
+  color: #000;
   margin-bottom: 20px;
   margin-left: 10px;  
   animation: fadeIn var(--duracao) var(--ease);
@@ -398,7 +399,7 @@ footer a:hover {
   bottom: 25px;
   right: 25px;
   background-color: var(--cor-primaria);
-  color: white;
+  color: rgb(77, 27, 27);
   border: none;
   padding: 12px 16px;
   border-radius: 50%;
